# sphinx-jupyterbook-latex

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pdf.yml
docs/: _config.yml  _toc.yml  conf.py  configuration.md  contributing.md  features.md  getting-started.md  index.md  intro.md  requirements.txt
docs/source/: conf.py  contributing.md  index.md  intro.md
jupyterbook_latex/: __init__.py  events.py  nodes.py  transforms.py  utils.py
jupyterbook_latex/theme/: jupyterBook.cls
sphinx_jupyterbook_latex/: __init__.py  events.py  nodes.py  transforms.py
sphinx_jupyterbook_latex/theme/: jupyterBook.cls
tests/: conftest.py  test_config.py  test_jupyter_book.py  test_sphinx.py  test_toc.py  test_transforms.py
tests/roots/test-MystNbPostTransform/: conf.py
tests/roots/test-codeCellTransforms/: cell-hide.md  index.rst
tests/roots/test-partsToc/: _config.yml  _toc.yml  intro.md
tests/roots/test-partsToc/part1/: chap2.md
tests/roots/test-transforms/: cell-hide-input.md  cell-hide-output.md
tests/test_config/: test_jblatex_show_tocs.resolved.xml  test_jblatex_show_tocs<14.resolved.xml
tests/test_jupyter_book/: test_toc.tex  test_toc.xml
tests/test_sphinx/: test_build_no_ext.resolved.xml  test_build_no_ext.tex  test_build_no_ext.xml  test_build_with_ext.resolved.xml  test_build_with_ext.tex  test_build_with_ext.xml  test_build_with_ext_<14.xml  test_build_with_ext_>14.resolved.xml
tests/test_toc/: test_toc.fdb_latexmk  test_toc.fls  test_toc.tex  test_toc.xml
tests/test_transforms/: test_hide_cell.resolved.xml  test_hide_cell_mystnb.resolved.xml  test_hide_cell_mystnb<14.resolved.xml  test_hide_input.resolved.xml  test_hide_input_mystnb.resolved.xml  test_hide_input_mystnb<14.resolved.xml  test_hide_input_mystnb>14.resolved.xml  test_hide_output.resolved.xml  test_hide_output_mystnb>14.resolved.xml
