[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "sphinx-jupyterbook-latex"
description = "Latex specific features for jupyter book"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Executable Book Project", email = "jupyter@googlegroups.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "importlib-resources;python_version<'3.9'",
    "sphinx>=3,<5",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
code_style = [
    "pre-commit~=2.12",
]
myst = [
    "myst-nb>=0.13,<0.14",
]
rtd = [
    "myst-parser",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-jupyterbook-latex",
]
testing = [
    "coverage<5.0",
    "myst-nb>=0.13,<0.14",
    "pytest-cov~=2.8",
    "pytest-regressions",
    "pytest>=3.6,<4",
    "sphinx-external-toc>=0.1.0,<0.3.0",
    "sphinxcontrib-bibtex>=2.2.1,<2.3.0",
    "texsoup",
]

[project.urls]
Homepage = "https://executablebooks.org/"

[tool.hatch.build.targets.sdist]
include = [
    "/sphinx_jupyterbook_latex",
    "/.flake8",
    "/CHANGELOG.md"
]

[tool.hatch.version]
path = "sphinx_jupyterbook_latex/__init__.py"

[tool.isort]
profile = "black"
src_paths = [
    "sphinx_jupyterbook_latex",
    "tests",
]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
