[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Executable Book Project", email = "jupyter@googlegroups.com"}
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "importlib-resources;python_version<'3.9'",
  "sphinx>=3,<5"
]
description = "Latex specific features for jupyter book"
dynamic = [
  "version"
]
license = {file = "LICENSE"}
name = "sphinx-jupyterbook-latex"
readme = "README.md"
requires-python = ">=3.6"

[project.optional-dependencies]
code_style = [
  "pre-commit~=2.12"
]
myst = [
  "myst-nb>=0.13,<0.14"
]
rtd = [
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-design",
  "sphinx-jupyterbook-latex"
]
testing = [
  "coverage<5.0",
  "myst-nb>=0.13,<0.14",
  "pytest-cov~=2.8",
  "pytest-regressions",
  "pytest>=3.6,<4",
  "sphinx-external-toc>=0.1.0,<0.3.0",
  "sphinxcontrib-bibtex>=2.2.1,<2.3.0",
  "texsoup"
]

[project.urls]
Homepage = "https://executablebooks.org/"

[tool.flit.module]
name = "sphinx_jupyterbook_latex"

[tool.isort]
profile = "black"
src_paths = [
  "sphinx_jupyterbook_latex",
  "tests"
]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
