[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Executable Book Project", email = "jupyter@googlegroups.com"}
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "sphinx>=5",
  "packaging"
]
description = "Latex specific features for jupyter book"
dynamic = [
  "version"
]
license = {file = "LICENSE"}
name = "sphinx-jupyterbook-latex"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
code_style = [
  "pre-commit~=2.12"
]
myst = [
  "myst-nb>=1.0.0"
]
rtd = [
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-design",
  "sphinx-jupyterbook-latex"
]
testing = [
  "coverage>=6.0",
  "myst-nb>=1.0.0",
  "pytest-cov>=3",
  "pytest-regressions",
  "pytest>=7.1",
  "sphinx-external-toc>=1.0.0",
  "sphinxcontrib-bibtex>=2.6.0",
  "texsoup"
]

[project.urls]
Homepage = "https://executablebooks.org/"

[tool.flit.module]
name = "sphinx_jupyterbook_latex"

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
