[metadata]
name = sphinx_jupyterbook_latex
version = attr: sphinx_jupyterbook_latex.__version__
description = Latex specific features for jupyter book
long_description = file: README.md
long_description_content_type = text/markdown
url = https://executablebooks.org/
author = Executable Book Project
author_email = jupyter@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    sphinx>=3,<5
    importlib-resources;python_version<'3.9'
python_requires = >=3.6
include_package_data = True

[options.extras_require]
code_style =
    pre-commit~=2.12
myst =
    myst-nb>=0.13,<0.14
rtd =
    myst-parser
    sphinx-book-theme
    sphinx-design
    sphinx-jupyterbook-latex
testing =
    coverage<5.0
    myst-nb>=0.13,<0.17
    pytest>=3.6,<4
    pytest-cov~=2.8
    pytest-regressions
    sphinx-external-toc>=0.1.0,<0.3.0
    sphinxcontrib-bibtex>=2.2.1,<2.3.0
    texsoup

[options.packages.find]
exclude =
    test*

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203
per-file-ignores =
    sphinx_jupyterbook_latex/nodes.py:N802
